horizontal scroll fixed. Event  detail cards alignment fixed.

--- a/css/main.css
+++ b/css/main.css
@@ -22,11 +22,17 @@
 	position: relative;
 	width: 100%;
 	height: auto;/*height: 100%;*/
-	margin: 30px auto;
+  padding-top:50px;
 	display: block;
 	background: #eee;
+  text-align: center;
 	/*background: url(../img/bg.jpg)*/
 }
+
+.ib-container h1{
+  padding-bottom: 10px;
+}
+
 .ib-container:before,
 .ib-container:after {
     content:"";
@@ -36,12 +42,11 @@
     clear:both;
 }
 .ib-container article{
-	display: block;
+	display: inline-block;
 	width: 235px;
 	height: 200px;
 	background: #fff;
 	cursor: pointer;
-	float: left;
 	border: 10px solid #fff;
 	text-align: center;
 	text-transform: none;
